<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/button_bbs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Bbc" />

    <Button
        android:id="@+id/button_guardian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Guardian"/>

    <Button
        android:id="@+id/button_nasa_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NasaImage" />

    <Button
        android:id="@+id/button_nasa_earth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NasaEarth"/>


</LinearLayout>