<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/nasaDetailsLayout"
    tools:context=".NasaEarthDetailsMainActivity"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.drawerlayout.widget.DrawerLayout
            android:id="@+id/drawer_layout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            tools:openDrawer="start">

            <Button
                android:id="@+id/insert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/MenuText" />

            <com.google.android.material.navigation.NavigationView
                android:id="@+id/nav_view"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_gravity="start"
                android:fitsSystemWindows="true"
                app:headerLayout="@layout/nasaearth_header_layout"
                app:menu="@menu/nasaearth_drawer" />
        </androidx.drawerlayout.widget.DrawerLayout>

    </LinearLayout>


    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:id="@+id/progressBar"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progressDrawable="@drawable/progressnasaearth">
    </ProgressBar>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/progressBar"
        android:contentDescription="Image" />

    <TextView
        android:id="@+id/textLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Latitude"
        android:layout_toEndOf="@id/imageView"
        android:fontFamily="sans-serif-thin"
        android:textSize="20dp"
        android:layout_marginTop="25dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/textLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textLatitude"
        android:text="@string/Longitude"
        android:layout_toEndOf="@id/imageView"
        android:textColor="#E91E63"
        android:textSize="20dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/textDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_below="@id/textLongitude"
        android:layout_toEndOf="@id/imageView"
        android:textColor="#0A8BF1"
        android:layout_marginTop="10dp"
        android:text="@string/Time" />

</RelativeLayout>

    <EditText
        android:id="@+id/editTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="fill"
        android:hint="@string/DetTextHint">
    </EditText>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <Button
        android:id="@+id/addFavButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AddFav" />

    <Button
        android:id="@+id/goToFav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ViewFav" />

    <Button
        android:id="@+id/goToSearch"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/HomePage" />
</LinearLayout>

    <FrameLayout
        android:id="@+id/fragmentLocation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="0dp"
        android:background="@color/colorPrimary">

    </FrameLayout>

</LinearLayout>
